--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ body{
   font-family: Arial;
   padding: 20px;
   margin: 1px;
-  height: relative;
+  height: 90%;
 } 
-  
+ing{
+  display: flex;
+}
