--- a/index.css
+++ b/index.css
@@ -2,6 +2,16 @@ html{
   min-height: 90vh;
   background: #BD9A7A;
 }
+head{
+  font-family: Champagne, Arial;
+  font-size: relative;
+  font-color: black;
+}
+title{
+  text-align: center;
+  position: absolute;
+  font-color: #645452;
+}
 body{
   display: flex;
   font-family: Arial;
