--- a/index.css
+++ b/index.css
@@ -3,7 +3,14 @@ html{
   max-height: 100vh;
   background: #BD9A7A;
 }
-
+.container {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max-width: 500px;
+}
 body{
   display: flex;
   height: 100vh;
