--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ body{
   height: 100vh;
   margin: 0;
   background-color: #BD9A7A;
-  color: #f5f6f7;
   text-align: center;
   font-family: Tahoma;
   font-size: 30px;
@@ -28,9 +27,10 @@ img{
   max-width: 200px;
   max-height: 200px;
 }
-.topOverlay{
+.top, .middle, .bottom{
   text-align: center;
 }
+
 a {
   font-size: 20px;
   color: #622F22;
@@ -56,6 +56,7 @@ footer{
 #TOP {
     margin: 1vw 0;
     width: 18vw;
+  color: #622F22;
     display: block;
     transform: translateX(1.5%);
 }
