--- a/index.css
+++ b/index.css
@@ -4,11 +4,12 @@ html{
   background: #BD9A7A;
 }
 .container {
-  width: 80%;
+  width: 90%;
   background-color: burlywood;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 10px;
+  max-height: 500px;
   max-width: 500px;
 }
 body{
