--- a/index.css
+++ b/index.css
@@ -4,8 +4,8 @@ html{
   background: #BD9A7A;
 }
 .container {
-  height: 90%;
-  width: 90%;
+  height: 90vh;
+  width: 90vh;
   background-color: burlywood;
   margin-left: auto;
   margin-right: auto;
