--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html{
   min-height: 100vh;
   max-height: 100vh;
-  background: #fdf5e6;
+  background: #ffddca;
 }
 .container {
   height: 100vh;
