--- a/recipes/lunch.css
+++ b/recipes/lunch.css
@@ -5,7 +5,7 @@ html{
 body{
   height: 100vh;
   color: #225562;
-  background-color: #BD9A7A;
+  background-color: #c19a6b;
   font-family: Champagne;
   font-size: 40px;
 }
