--- a/recipes/breakfast.css
+++ b/recipes/breakfast.css
@@ -5,7 +5,7 @@ html{
 body{
   height: 100vh;
   color: #225562;
-  background-color: #BD9A7A;
+  background-color: #fdf5e6;
   font-family: Champagne;
   font-size: 40px;
 }
