--- a/recipes/drinks.css
+++ b/recipes/drinks.css
@@ -1,11 +1,11 @@
 html{
   height: 100vh;
-  background: #fdf5e6;
+  background: #c19a6b;
 }
 body{
   height: 100vh;
   color: #225562;
-  background-color: #BD9A7A;
+  background-color: #c19a6b;
   font-family: Champagne;
   font-size: 40px;
 }
