--- a/recipes/drinks.css
+++ b/recipes/drinks.css
@@ -5,7 +5,7 @@ html{
 body{
   height: 100vh;
   color: #225562;
-  background-color: #c19a6b;
+  background: #c19a6b;
   font-family: Champagne;
   font-size: 40px;
 }
