--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body{
   display: flex;
   height: 100vh;
   margin: 0;
-  background-color: #ba8759;
+  background: #ffddca;
   text-align: center;
   font-family: Tahoma;
   font-size: 30px;
