--- a/recipes/breakfast.css
+++ b/recipes/breakfast.css
@@ -4,9 +4,9 @@ html{
 }
 body{
   height: 100vh;
-  color: #225562;
   background: #c19a6b;
   font-family: Champagne;
+  font-color: black;
   font-size: 40px;
 }
 .description{
